# cs402_proj1

./: .clang-format  CMakeLists.txt
.github/workflows/: ci.yml
include/: talha_khan_proj1.hpp
src/: main.cpp  talha_khan_proj1.cpp
tests/: CMakeLists.txt  testing.cpp  testing.hpp  unit_tests.cpp
